# biotech-intel

./: .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
